--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,107 @@ body{
 }
 
 .container{
-  width: 375px;
+  width: 480px;
+  margin: 0 auto;
 }
 
+
+/* header */
+
+header .container{
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #0084FD;
+  height: 75px;
+}
+
+header .container a{
+  font-size: 1.5rem;
+  color: white;
+}
+
+/* main */
+
+/* demo section */
+
+.boxdemo{
+  width: 80%;
+  background-color: #B5DDFF;
+  padding: 40px 30px 0 30px;
+  border-radius: 20px;
+  margin: 50px auto;
+}
+
+.boxdemo .icon{
+  display: block;
+  text-align: center;
+  font-size: 6rem;
+}
+
+.boxdemo h3{
+  margin-bottom: 40px;
+  font-size: 1.8rem;
+  color: #0084FD;
+}
+
+.boxdemo p{
+  font-weight: bold;
+  color: #5A6E7F;
+  line-height: 1.9rem;
+}
+
+.boxdemo .btn{
+  display: inline-block;
+  text-align: center; 
+  margin-top: 30px;
+  padding: 40px 0;
+  text-decoration: none;
+  font-weight: bold;
+  color: white;
+  padding: 10px 70px;
+  border-radius: 20px;
+  background-color: #0084FD;
+}
+
+#phone{
+  position: relative;
+  top: 5px;
+  bottom: 0;
+  height: 300px;
+  margin-left: 10%;
+  padding-top: 40px;
+}
+
+
+/* box sections */
+
+.box{
+  width: 80%;
+  background-color: #B5DDFF;
+  padding: 40px 30px;
+  border-radius: 20px;
+  margin: 50px auto;
+}
+
+.box i{
+  display: block;
+  text-align: center;
+  font-size: 6rem;
+  color: #0084FD;
+  padding-bottom: 40px;
+}
+
+.box h3{
+  text-align: center;
+  font-size: 1.8rem;
+  color: #0084FD;
+  padding-bottom: 30px;
+}
+
+.box p{
+  font-weight: bold;
+  color: #5A6E7F;
+  line-height: 1.9rem;
+  text-align: center;
+}
