--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,6 @@ header .container a{
   background-color: #B5DDFF;
   padding: 40px 30px 0 30px;
   border-radius: 20px;
-  margin: 50px auto;
 }
 
 .boxdemo h3{
@@ -90,12 +89,20 @@ header .container a{
 
 /* box sections */
 
+.row{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  margin: 20px auto;
+}
+
 .box{
   width: 80%;
+  margin: 20px auto;
   background-color: #B5DDFF;
   padding: 40px 30px;
   border-radius: 20px;
-  margin: 30px auto;
 }
 
 .box i{
