--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,6 @@
 /* media-query */
 
+/* tablet */
 @media screen and (min-width: 780px){
   
   .container{
@@ -9,8 +10,6 @@
   .features{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-content: center;
   }
 
   .boxdemo{
@@ -18,7 +17,7 @@
   }
 
   .boxdemo #phone{
-    height: 360px;
+    height: 310px;
     position: static;
   }
 
@@ -28,11 +27,12 @@
 
   .row{
     flex-direction: row;
-    align-items: flex-start;
   }
 
 }
 
+
+/* desktop */
 @media screen and (min-width: 1200px){
 
   header{
@@ -43,12 +43,25 @@
     width: 1200px;
   }
 
+  header .container .mobilemenu{
+    display: none;
+  }
+
+  header .menu{
+    display: block;
+  }
+
   .container{
     width: 1200px;
   }
 
+  .boxdemo #phone{
+    height: 390px;
+    position: static;
+  }
+
   .boxdemo{
     flex-wrap: nowrap;
-    margin-top: 20px;
   }
+
 }
