--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body{
   width: 480px;
   margin: 0 auto;
   background-color: white;
+  padding: 0 30px 100px 30px;
 }
 
 
@@ -35,9 +36,37 @@ header .container{
   height: 75px;
 }
 
-header .container a{
+header .container .mobilemenu{
   font-size: 1.5rem;
   color: white;
+}
+
+header .menu{
+  display: none;
+}
+
+header .menu ul{
+  list-style: none;
+}
+
+header .menu ul li a{
+  color: white;
+  text-decoration: none;
+  font-size: 1.1rem;
+  padding: 0 10px;
+}
+
+header .menu ul li:last-child a{
+  text-decoration: none;
+  padding: 10px 25px;
+  background-color: white;
+  color: black;
+  border-radius: 20px;
+  margin-left: 10px;
+}
+
+header .menu ul li:hover a{
+  text-decoration: underline;
 }
 
 /* main */
@@ -92,7 +121,7 @@ header .container a{
 .row{
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
   align-items: center;
   margin: 20px auto;
 }
