--- a/css/style.css
+++ b/css/style.css
@@ -155,3 +155,61 @@ header .menu ul li:hover a{
   line-height: 1.9rem;
   text-align: center;
 }
+
+
+/* planning section */
+
+.planning{
+  background-color: #9792E4;
+  display: flex;
+  flex-direction: column;
+}
+
+.planning .planning-left img,
+.planning .planning-right img{
+  width: 100%;
+  padding: 50px 0;
+}
+
+.planning .planning-right{
+  background-color: white;
+  border-radius: 50px;
+  padding-bottom: 40px;
+}
+
+.planning .planning-left h2{
+  color: white;
+  font-size: 2rem;
+  padding-bottom: 35px;
+}
+
+.planning .planning-left p{
+  color: white;
+  line-height: 2rem;
+  padding-bottom: 20px;
+}
+
+.planning .planning-right h2{
+  text-align: center;
+  padding-bottom: 35px;
+}
+
+.planning .planning-right p{
+  text-align: center;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding-bottom: 50px;
+}
+
+.planning .planning-right a{
+  margin-left: 45%;
+  display: inline-block;
+  color: black;
+  font-size: 1.2rem;
+  background-color: #9792E4;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  line-height: 50px;
+  border-radius: 50%;
+}
